fix: 修复更新逻辑
